--- a/index.html
+++ b/index.html
@@ -1,31 +1,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="index.css">
 <script src="index.js"></script>
-
-<body>
-	<div class="sendRoc">
-		<div class="firework">
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-			<div class="spark"></div>
-		</div>
-		<div class="rocket"></div>
-	</div>
-</body>
+<body></body>
