--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="stylesheet" href="index.css">
 <script src="index.js"></script>
-<body></body>
+<body>
+    <div class="light">
+        <div class="side1"></div>
+        <div class="side2"></div>
+        <div class="top"></div>
+        <div class="fire"></div>
+    </div>
+    <div lang="ta" class="wish">Happy Diwali <br> தீபாவளி</div>
+</body>
