backgorund music added

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
         <div class="fire"></div>
     </div>
     <div lang="ta" class="wish">Happy Diwali <br> தீபாவளி</div>
+    <audio src="diwali.mp3" autoplay loop></audio>
 </body>
