--- a/test.html
+++ b/test.html
@@ -31,6 +31,8 @@
       async function trigger() {
         const constraints = {
           video: {
+            width: "1080",
+            height: "1920"
             facingMode: "environment",
           }
         };
