--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
         const constraints = {
           video: {
             width: "1080",
-            height: "1920"
+            height: "1920",
             facingMode: "environment",
           }
         };
