--- a/test.html
+++ b/test.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <style>
       video {
-        width: 500px;
-        border: 1px solid red;
+        border: 2px solid green;
       }
     </style>
   </head>
