--- a/test.html
+++ b/test.html
@@ -8,6 +8,9 @@
       video {
         border: 2px solid green;
       }
+      button {
+        position: fixed
+      }
     </style>
   </head>
   <body>
