--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
       video {
-        border: 2px solid green;
+        border: 2px solid blue;
       }
       button {
         position: fixed
