--- a/test.html
+++ b/test.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <style>
       video {
-        border: 2px solid blue;
+        width: 100%;
+        border: 2px solid red;
       }
       button {
         position: fixed
@@ -33,8 +34,8 @@
       async function trigger() {
         const constraints = {
           video: {
-            width: "3840",
-            height: "2160",
+            width: "7680",
+            height: "4320",
             facingMode: "environment",
           }
         };
