add price calculator

--- a/money_calc.html
+++ b/money_calc.html
@@ -34,10 +34,15 @@
 			padding: 10px;
 			margin: 10px;
 		}
+		.action-button {
+			position: fixed;
+		}
 	</style>
 </head>
 <body>
-
+	<div class="action-button">
+		<a href="/price-calc.html">Price Calculator</a>
+	</div>
 	<main>
 		<h1>Money Calculator</h1>
 		<div class="output">
