--- a/money_calc.html
+++ b/money_calc.html
@@ -2,42 +2,7 @@
 <head>
 	<title>Money Calculator</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-		body {
-			font-family: arial;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 100vh;
-			margin: 0;
-		}
-		main {
-			border: 2px solid black;
-			min-width: 250px;
-			padding: 20px;
-		}
-		h1 { text-align: center }
-		div.input-group {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			padding: 10px;
-			font-size: 20px;
-		}
-		div input {
-			padding: 10px;
-			font-size: 20px;
-		}
-		.output {
-			font-size: 30px;
-			border: 2px solid blue;
-			padding: 10px;
-			margin: 10px;
-		}
-		.action-button {
-			position: fixed;
-		}
-	</style>
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<div class="action-button">
