this exact some place

--- a/price_calc.html
+++ b/price_calc.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<div class="action-button">
-		<a href="/price_calc.html">Price Calculator</a>
+		<a href="/money_calc.html">Money Calculator</a>
 	</div>
 	<main>
-		<h1>Money Calculator</h1>
+		<h1>Price Calculator</h1>
 		<div class="output">
 			&#x20b9;
 			<span id="output_screen"></span>
