this is some code change

--- a/money_calc.html
+++ b/money_calc.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="action-button">
-		<a href="/price_calc.html">Price Calculator</a>
+		<a href="./price_calc.html">Price Calculator</a>
 	</div>
 	<main>
 		<h1>Money Calculator</h1>
