--- a/price_calc.html
+++ b/price_calc.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="action-button">
-		<a href="/money_calc.html">Money Calculator</a>
+		<a href="./money_calc.html">Money Calculator</a>
 	</div>
 	<main>
 		<h1>Price Calculator</h1>
